--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,84 @@
-body {
+/*
+  Josh Comeau's Modern CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+}
+html,
+body {
+  height: 100%;
+}
+body {
+  line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+#root,
+#__next {
+  isolation: isolate;
+}
+/* 
+  End Modern CSS Reset
+*/
+
+:root {
+  --header-height: 3em;
+  --header-background: #3e3e3e;
+  --footer-height: 3em;
+  --footer-background: #3e3e3e;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  height: 100%;
+}
+
+header {
+  height: var(--header-height);
+  background-color: var(--header-background);
+}
+
+main {
+  height: calc(100% - var(--header-height) - var(--footer-height));
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+footer {
+  height: var(--footer-height);
+  background-color: var(--footer-background);
+}
+
+.icons {
+  display: flex;
+  gap: 1em;
 }
